# bakersoft

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/core/: admin.py  exceptions.py  models.py  serializers.py  views.py
app/core/celery/: __init__.py  app.py  logger.py  task_router.py
app/core/migrations/: 0001_initial.py  0002_auto_20220910_1925.py
app/server/: settings.py  urls.py
app/work_tracking/: admin.py  api.py  apps.py  errors.py  permissions.py  serializers.py  tasks.py  urls.py
app/work_tracking/api/: __init__.py  base.py  employee.py  tracking.py
app/work_tracking/migrations/: 0001_initial.py  0002_alter_worktimelog_employee.py  0003_auto_20220910_1432.py  0004_rename_achievment_worktimelog_achievement.py  0005_auto_20220910_1904.py  0006_auto_20220910_1925.py  0007_auto_20220910_2050.py  0008_task_project.py  0009_auto_20220911_1838.py  0010_taskstatechange.py  0011_auto_20220911_1854.py
app/work_tracking/models/: __init__.py  base.py  employee.py  state_machine.py  tracking.py
app/work_tracking/permissions/: __init__.py  logs.py
app/work_tracking/serializers/: __init__.py  employee.py  tracking.py
app/work_tracking/services/: employee.py  project.py  task.py  team.py
tests/: conftest.py
tests/app/: settings.py
tests/app/test_work_tracking/: test_tasks.py
tests/app/test_work_tracking/test_api/: conftest.py  test_log_entries.py  test_projects.py  test_tasks.py  test_tracking.py
tests/app/test_work_tracking/test_services/: test_employee.py  test_project.py  test_task.py  (+1 more)
