[tool.poetry]
name = "bakersoft"
version = "0.1.0"
description = ""
authors = ["osamahasanone <osamahasanone@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
Django = "4.0"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.3"
django-fsm = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
